Removed unnecessary configuration